--- a/index.html
+++ b/index.html
@@ -4,28 +4,30 @@
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
-  <header>
-    <nav>
+  <header>     
+    <nav role="banner">
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" role="main">
+    <a href="#aftermap" class="scip-link">Scip map</a> 
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" name="map" tabindex="0" role="application"></div>
     </section>
-    <section>
+    <section id="aftermap">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
+        <select id="neighborhoods-select" name="neighborhoods" role="menu" onchange="updateRestaurants()">
+          <option value="all" role="menuitem">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
+        <select id="cuisines-select" name="cuisines" role="menu" onchange="updateRestaurants()">
+          <option value="all" role="menuitem">All Cuisines</option>
         </select>
       </div>
       <ul id="restaurants-list"></ul>
@@ -35,9 +37,9 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfDsaEgjXnJzeRzlGoYdtI1ro7i-T83Jo&libraries=places&callback=initMap"></script>
+  
 
-
-  <footer id="footer">
+  <footer id="footer" role="connectinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
