--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <option value="all" role="menuitem" tabindex="0">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list" ></ul>
+      <ul id="restaurants-list" role="feed" aria-label="list of restaurants"></ul>
     </section>
   </main>
 
