--- a/restaurant.html
+++ b/restaurant.html
@@ -35,7 +35,7 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <section id="restaurant-container" tabindex="0" role="article">
       <h2 id="restaurant-name"></h2>
       <img id="restaurant-img" alt="restaurant image">
       <p id="restaurant-cuisine"></p>
@@ -44,8 +44,8 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list" role="tree"></ul>
+    <section id="reviews-container" role="feed">
+      <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
   </main>
