--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
   <main id="maincontent" role="main">
     <a href="#aftermap" class="scip-link">Scip map</a> 
+    <!-- Beginning map -->
     <section id="map-container">
       <div id="map" name="map" tabindex="0" role="application"></div>
     </section>
+    <!-- End map -->
     <section id="aftermap">
       <div class="filter-options">
         <h2>Filter Results</h2>
