--- a/restaurant.html
+++ b/restaurant.html
@@ -44,7 +44,7 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container" role="feed">
+    <section id="reviews-container" tabindex="0" role="feed">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
