--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -14,7 +14,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
-
+  <!-- Beginning main -->
   <main id="maincontent" role="main">
     <a href="#aftermap" class="scip-link">Scip map</a> 
     <!-- Beginning map -->
@@ -23,6 +23,7 @@
     </section>
     <!-- End map -->
     <section id="aftermap">
+      <!--Beginning Filter section -->
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" role="menubar" aria-label="neighborhoods" aria-expanded="false" onchange="updateRestaurants()">
@@ -32,14 +33,24 @@
           <option value="all" role="menuitem" tabindex="0">All Cuisines</option>
         </select>
       </div>
+      <!--End Filter section -->
+      <!--Beginning Restaurant List -->
       <ul id="restaurants-list" role="feed" aria-label="list of restaurants"></ul>
+      <!--End Restaurant List -->
     </section>
   </main>
+  <!-- End main -->
 
+  <!-- Beginning scripts -->
+  <!-- Database helpers -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <!-- main javascript file -->
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <!-- sw-registration javascript file -->
+  <script type="application/javascript" charset="utf-8" src="js/sw-registration.js"></script>
+  <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfDsaEgjXnJzeRzlGoYdtI1ro7i-T83Jo&libraries=places&callback=initMap"></script>
-  
+  <!-- End scripts -->
 
   <footer id="footer" role="connectinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
