--- a/restaurant.html
+++ b/restaurant.html
@@ -14,16 +14,15 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
-      <div role="banner">
-        <h1><a href="/">Restaurant Reviews</a></h1>
-      </div>
+    <nav>  
+      <h1><a href="/">Restaurant Reviews</a></h1>
       <!-- Beginning breadcrumb -->
       <ul id="breadcrumb" aria-label="Breadcrumb"	>
         <li><a href="/">Home</a></li>
       </ul>
       <!-- End breadcrumb -->
     </nav>
+    
     <!-- End nav -->
   </header>
   <!-- End header -->
@@ -37,7 +36,7 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container" tabindex="0" role="article">
+    <section id="restaurant-container"  role="article">
       <h2 id="restaurant-name"></h2>
       <img id="restaurant-img" alt="restaurant image">
       <p id="restaurant-cuisine"></p>
@@ -46,7 +45,7 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container" tabindex="0" role="feed">
+    <section id="reviews-container" role="feed">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
