--- a/restaurant.html
+++ b/restaurant.html
@@ -37,10 +37,12 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container"  role="article">
-      <h2 id="restaurant-name"></h2>
-      <img id="restaurant-img" alt="restaurant image">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
+        <h2 id="restaurant-name"></h2>
+        <div class="card">
+          <img id="restaurant-img" alt="restaurant image">
+          <p id="restaurant-cuisine"></p>
+          <p id="restaurant-address"></p>
+        </div>
       <table id="restaurant-hours" role="grid" aria-rowcount="7" aria-colcount="2"></table>
     </section>
     <!-- end restaurant -->
