get data from idb

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <!-- End main -->
 
   <!-- Beginning scripts -->
+  <!-- idb file -->
+  <script type="application/javascript" charset="utf-8" src="node_modules\idb\lib\idb.js"></script>
   <!-- Database helpers -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <!-- main javascript file -->
